k8s/traefik/postgres.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: postgres.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres-pgweb
                port:
                  number: 8081
